--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -28,3 +28,9 @@ ClassAndModuleChildren:
 
 Style/FrozenStringLiteralComment:
   Enabled: false
+
+Metrics/AbcSize:
+  Max: 18
+
+Metrics/MethodLength:
+  Max: 13
