[update] time setting

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
     image: mysql:5.7
     environment:
       MYSQL_ROOT_PASSWORD: password
+      TZ: Asia/Tokyo
     volumes:
       - db-data:/var/lib/mysql
 
