--- a/nginx_docker/nginx.conf
+++ b/nginx_docker/nginx.conf
@@ -3,6 +3,7 @@ upstream LYbody {
 }
 
 server {
+  client_max_body_size 20M;
   listen 80;
   server_name localhost;
   keepalive_timeout 5;
@@ -19,5 +20,4 @@ server {
     proxy_set_header Host $http_host;
     proxy_pass http://LYbody;
   }
-
 }
