--- a/nginx_docker/nginx.conf
+++ b/nginx_docker/nginx.conf
@@ -5,7 +5,10 @@ upstream LYbody {
 server {
   client_max_body_size 20M;
   listen 80;
-  server_name localhost;
+  # ====== ローカルと本番環境で切り替え =======
+  # server_name localhost;
+  server_name 54.178.237.65;
+  # =======================================
   keepalive_timeout 5;
   root /LYbody/public;
   access_log /var/log/nginx/access.log;
