--- a/config/database.yml
+++ b/config/database.yml
@@ -56,4 +56,4 @@ production:
   collation: utf8mb4_general_ci
   host: <%= ENV['DB_HOST'] %>
   username: <%= ENV['DB_USERNAME'] %>
-  password: <%= ENV['MYAPP_DATABASE_PASSWORD'] %>
+  password: <%= ENV['DB_PASSWORD'] %>
