[add] domain to nginx.conf

--- a/nginx_docker/nginx.conf
+++ b/nginx_docker/nginx.conf
@@ -7,7 +7,8 @@ server {
   listen 80;
   # ====== ローカルと本番環境で切り替え =======
   # server_name localhost;
-  server_name 54.178.237.65;
+  # server_name 54.178.237.65;
+  server_name lybody.online;
   # =======================================
   keepalive_timeout 5;
   root /LYbody/public;
