--- a/.github/workflows/rails.yml
+++ b/.github/workflows/rails.yml
@@ -9,6 +9,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - name: Setup docker
+      shell: bash
+      run: |
+        docker-compose build
+        docker-compose run web rails db:create
+      env:
+        RAILS_ENV: test
     - name: RSpec
     run: |
       docker-compose run web bundle exec rspec
@@ -28,14 +35,9 @@ jobs:
         echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
         ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOST_NAME} 'cd LYbody-app &&
         git pull origin master &&
-        docker-compose run web bundle install &&
+        docker-compose run --rm web bundle install &&
         docker-compose up -d &&
         docker-compose exec web rails assets:precompile RAILS_ENV=production &&
         docker-compose exec web rails db:migrate RAILS_ENV=production &&
+        if [[ -e tmp/pids/puma.pid ]];then kill $(cat tmp/pids/puma.pid); echo kill puma process;fi &&
         docker-compose exec web rails db:seed_fu RAILS_ENV=production
-
-  # ~/.rbenv/shims/bundle install &&
-  # ~/.rbenv/shims/bundle exec rails assets:precompile RAILS_ENV=production &&
-  # ~/.rbenv/shims/bundle exec rails db:migrate RAILS_ENV=production &&
-  # if [[ -e tmp/pids/puma.pid ]];then kill $(cat tmp/pids/puma.pid); echo kill puma process;fi &&
-  # ~/.rbenv/shims/rails s -e production'
