--- a/.github/workflows/rails.yml
+++ b/.github/workflows/rails.yml
@@ -5,22 +5,22 @@ on:
     branches: [master]
 
 jobs:
-  rspec:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Setup docker
-      shell: bash
-      run: |
-        docker-compose build
-        docker-compose run web rails db:create
-      env:
-        RAILS_ENV: test
-    - name: RSpec
-    run: |
-      docker-compose run web bundle exec rspec
-    env:
-      RAILS_ENV: test
+  # rspec:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - uses: actions/checkout@v2
+  #   - name: Setup docker
+  #     shell: bash
+  #     run: |
+  #       docker-compose build
+  #       docker-compose run web rails db:create
+  #     env:
+  #       RAILS_ENV: test
+  #   - name: RSpec
+  #   run: |
+  #     docker-compose run web bundle exec rspec
+  #   env:
+  #     RAILS_ENV: test
 
   build:
     runs-on: ubuntu-latest
