--- a/.github/workflows/rails.yml
+++ b/.github/workflows/rails.yml
@@ -23,4 +23,4 @@ jobs:
         docker-compose exec web rails assets:precompile RAILS_ENV=production &&
         docker-compose exec web rails db:migrate RAILS_ENV=production &&
         if [[ -e tmp/pids/puma.pid ]];then kill $(cat tmp/pids/puma.pid); echo kill puma process;fi &&
-        docker-compose exec web rails db:seed_fu RAILS_ENV=production
+        docker-compose exec web rails db:seed_fu RAILS_ENV=production'
