--- a/.github/workflows/rails.yml
+++ b/.github/workflows/rails.yml
@@ -19,7 +19,7 @@ jobs:
         ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOST_NAME} 'cd LYbody-app &&
         git pull origin master &&
         docker-compose run --rm web bundle install &&
-        docker-compose exec web rails assets:precompile RAILS_ENV=production &&
-        docker-compose exec web rails db:migrate RAILS_ENV=production &&
+        docker-compose run --rm web rails assets:precompile RAILS_ENV=production &&
+        docker-compose run --rm web rails db:migrate RAILS_ENV=production &&
         if [[ -e tmp/pids/puma.pid ]];then kill $(cat tmp/pids/puma.pid); echo kill puma process;fi &&
-        docker-compose exec web rails db:seed_fu RAILS_ENV=production'
+        docker-compose run --rm web rails db:seed_fu RAILS_ENV=production'
