--- a/.github/workflows/rails.yml
+++ b/.github/workflows/rails.yml
@@ -13,12 +13,13 @@ jobs:
       shell: bash
       run: |
         docker-compose build
-        docker-compose run web rails db:create
+        docker-compose run --rm web bundle install
+        docker-compose run --rm web rails db:create
       env:
         RAILS_ENV: test
     - name: Rspec
       run:  |
-        docker-compose run web bundle exec rspec
+        docker-compose run --rm web bundle exec rspec
       env:
         RAILS_ENV: test
   build:
