--- a/.github/workflows/rails.yml
+++ b/.github/workflows/rails.yml
@@ -12,14 +12,14 @@ jobs:
     - name: Setup docker
       shell: bash
       run: |
-        docker-compose build
-        docker-compose run --rm web bundle install
-        docker-compose run --rm web rails db:create
+        docker-compose -f docker-compose.yml -f docker-compose.dev.yml build
+        docker-compose -f docker-compose.yml -f docker-compose.dev.yml run --rm web bundle install
+        docker-compose -f docker-compose.yml -f docker-compose.dev.yml run --rm web rails db:create
       env:
         RAILS_ENV: test
     - name: Rspec
       run:  |
-        docker-compose run --rm web bundle exec rspec
+        docker-compose -f docker-compose.yml -f docker-compose.dev.yml run --rm web bundle exec rspec
       env:
         RAILS_ENV: test
   build:
