--- a/.github/workflows/rails.yml
+++ b/.github/workflows/rails.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   rspec:
     runs-on: ubuntu-latest
+    timeout-minutes: 30
     steps:
     - uses: actions/checkout@v2
     - name: Setup docker
@@ -24,6 +25,7 @@ jobs:
         RAILS_ENV: test
   build:
     runs-on: ubuntu-latest
+    timeout-minutes: 30
     needs: rspec
     steps:
     - uses: actions/checkout@v2
