[add] system spec to users login

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -7,7 +7,7 @@ services:
       - .:/LYbody
       - bundle_path:/bundle
       - public-data:/LYbody/public
-      - tmp-data:/LYbody/tmp
+      - tmp-data:/LYbody/tmp/sockets
       - log-data:/var/log/nginx
     environment:
       - BUNDLE_PATH=/bundle
@@ -27,6 +27,7 @@ services:
 
   chrome:
     image: selenium/standalone-chrome:latest
+    shm_size: 256m
     ports:
       - 4444:4444
 
