--- a/.github/workflows/rails.yml
+++ b/.github/workflows/rails.yml
@@ -40,9 +40,10 @@ jobs:
         git pull origin master &&
         docker-compose run --rm web bundle install &&
         docker-compose run --rm web rails assets:precompile RAILS_ENV=production &&
+        docker exec -it lybody-app_web_1 bash &&
+        bundle exec whenever --update-crontab RAILS_ENV=production &&
+        service cron start &&
+        exit &&
         docker-compose run --rm web rails db:migrate RAILS_ENV=production &&
         if [[ -e tmp/pids/puma.pid ]];then kill $(cat tmp/pids/puma.pid); echo kill puma process;fi &&
-        docker-compose run --rm web rails db:seed_fu RAILS_ENV=production &&
-        docker exec -it lybody-app_web_1 bash &&
-        service cron start &&
-        exit'
+        docker-compose run --rm web rails db:seed_fu RAILS_ENV=production'
