--- a/.github/workflows/rails.yml
+++ b/.github/workflows/rails.yml
@@ -26,7 +26,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     timeout-minutes: 30
-    needs: rspec
+    # needs: rspec
     steps:
     - uses: actions/checkout@v2
     - name: Deploy
