--- a/.github/workflows/rails.yml
+++ b/.github/workflows/rails.yml
@@ -44,8 +44,9 @@ jobs:
         if [[ -e tmp/pids/puma.pid ]];then kill $(cat tmp/pids/puma.pid); echo kill puma process;fi &&
         docker-compose run --rm web rails db:seed_fu RAILS_ENV=production &&
         docker-compose run --rm web bundle exec whenever --update-crontab RAILS_ENV=production &&
-        docker-compose up -d &&
-        docker exec -it lybody-app_web_1 bash &&
-        service cron start &&
-        exit'
+        docker-compose up -d'
+
+# docker exec -it lybody-app_web_1 bash &&
+#         service cron start &&
+#         exit
 
