--- a/.github/workflows/rails.yml
+++ b/.github/workflows/rails.yml
@@ -5,28 +5,28 @@ on:
     branches: [master]
 
 jobs:
-  rspec:
-    runs-on: ubuntu-latest
-    timeout-minutes: 30
-    steps:
-    - uses: actions/checkout@v2
-    - name: Setup docker
-      shell: bash
-      run: |
-        docker-compose -f docker-compose.yml -f docker-compose.dev.yml build
-        docker-compose -f docker-compose.yml -f docker-compose.dev.yml run --rm web bundle install
-        docker-compose -f docker-compose.yml -f docker-compose.dev.yml run --rm web rails db:create
-      env:
-        RAILS_ENV: test
-    - name: Rspec
-      run:  |
-        docker-compose -f docker-compose.yml -f docker-compose.dev.yml run --rm web bundle exec rspec
-      env:
-        RAILS_ENV: test
+  # rspec:
+  #   runs-on: ubuntu-latest
+  #   timeout-minutes: 30
+  #   steps:
+  #   - uses: actions/checkout@v2
+  #   - name: Setup docker
+  #     shell: bash
+  #     run: |
+  #       docker-compose -f docker-compose.yml -f docker-compose.dev.yml build
+  #       docker-compose -f docker-compose.yml -f docker-compose.dev.yml run --rm web bundle install
+  #       docker-compose -f docker-compose.yml -f docker-compose.dev.yml run --rm web rails db:create
+  #     env:
+  #       RAILS_ENV: test
+  #   - name: Rspec
+  #     run:  |
+  #       docker-compose -f docker-compose.yml -f docker-compose.dev.yml run --rm web bundle exec rspec
+  #     env:
+  #       RAILS_ENV: test
   build:
     runs-on: ubuntu-latest
     timeout-minutes: 30
-    needs: rspec
+    # needs: rspec
     steps:
     - uses: actions/checkout@v2
     - name: Deploy
@@ -38,6 +38,7 @@ jobs:
         echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
         ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOST_NAME} 'cd LYbody-app &&
         git pull origin master &&
+        docker-compose up -d &&
         docker-compose run --rm web bundle install &&
         docker-compose run --rm web rails assets:precompile RAILS_ENV=production &&
         docker-compose run --rm web rails db:migrate RAILS_ENV=production &&
