--- a/.github/workflows/rails.yml
+++ b/.github/workflows/rails.yml
@@ -40,6 +40,7 @@ jobs:
         git pull origin master &&
         docker-compose down &&
         docker-compose build &&
+        docker-compose up -d &&
         docker-compose run --rm web rails assets:precompile RAILS_ENV=production &&
         docker-compose run --rm web rails db:migrate RAILS_ENV=production &&
         if [[ -e tmp/pids/puma.pid ]];then kill $(cat tmp/pids/puma.pid); echo kill puma process;fi &&
