--- a/.github/workflows/rails.yml
+++ b/.github/workflows/rails.yml
@@ -41,12 +41,8 @@ jobs:
         docker-compose down &&
         docker-compose build &&
         docker-compose up -d &&
-        docker-compose run --rm web rails assets:precompile RAILS_ENV=production &&
-        docker-compose run --rm web rails db:migrate RAILS_ENV=production &&
-        if [[ -e tmp/pids/puma.pid ]];then kill $(cat tmp/pids/puma.pid); echo kill puma process;fi &&
-        docker-compose run --rm web rails db:seed_fu RAILS_ENV=production'
+        docker-compose exec -T web rails assets:precompile RAILS_ENV=production &&
+        docker-compose exec -T web rails db:migrate RAILS_ENV=production &&
+        docker-compose exec -T web rails db:seed_fu RAILS_ENV=production &&
+        if [[ -e tmp/pids/puma.pid ]];then kill $(cat tmp/pids/puma.pid); echo kill puma process;fi'
 
-# docker-compose up -d &&
-#         docker-compose run --rm web bundle install &&
-#         docker-compose run --rm web rails assets:precompile RAILS_ENV=production &&
-#         docker-compose run --rm web rails db:migrate RAILS_ENV=production &&
