--- a/.github/workflows/rails.yml
+++ b/.github/workflows/rails.yml
@@ -39,10 +39,11 @@ jobs:
         ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOST_NAME} 'cd LYbody-app &&
         git pull origin master &&
         docker-compose down &&
+        docker-compose build &&
         docker-compose up -d &&
         docker-compose exec -T web rails assets:precompile RAILS_ENV=production &&
         docker-compose exec -T web rails db:migrate RAILS_ENV=production &&
-        docker-compose exec -T web rails db:seed_fu RAILS_ENV=production &&
         if [[ -e tmp/pids/puma.pid ]];then kill $(cat tmp/pids/puma.pid); echo kill puma process;fi'
 
-# docker-compose build  
+# docker-compose build
+#  docker-compose exec -T web rails db:seed_fu RAILS_ENV=production &&
